--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         </div>
     </div>
     <footer>
-        <p>Copyright © The Odin Project 2021</p>
+        <p>DuskopeDev</p>
     </footer>
 </body>
 </html>
